<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDrinkFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/alcohol_perc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinkRadio" />

    <TextView
        android:id="@+id/alcoholPercentageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/default_perc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drinkRadio" />

    <SeekBar
        android:id="@+id/alcoholSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="12"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/alcoholPercentageDisplay"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/drinkRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/alcoholPercentageDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/drinkCountTextView"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton1oz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneoz" />

        <RadioButton
            android:id="@+id/radioButton5oz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiveoz" />

        <RadioButton
            android:id="@+id/radioButton12oz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twelve" />
    </RadioGroup>

    <TextView
        android:id="@+id/drinkCountTextView"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/drink_size"
        app:layout_constraintBottom_toBottomOf="@+id/drinkRadio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/drinkRadio" />

    <Button
        android:id="@+id/cancelButtonAddDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/addDrinkBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alcoholSlider" />

    <Button
        android:id="@+id/addDrinkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_drink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alcoholSlider" />
</androidx.constraintlayout.widget.ConstraintLayout>