<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetProfileFragment" >

    <TextView
        android:id="@+id/weightlbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/weightlbs"
        app:layout_constraintBottom_toBottomOf="@+id/enterWeight"
        app:layout_constraintEnd_toStartOf="@+id/enterWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enterWeight" />



    <EditText
        android:id="@+id/enterWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/enterweight"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightlbs"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="62dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:text="@string/gender"
        app:layout_constraintBottom_toBottomOf="@+id/genderRadio"
        app:layout_constraintEnd_toStartOf="@+id/enterWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/genderRadio" />

    <RadioGroup
        android:id="@+id/genderRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weightText"
        app:layout_constraintTop_toBottomOf="@+id/enterWeight">

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/cancelbutton"
        app:layout_constraintBottom_toBottomOf="@+id/setButton"
        app:layout_constraintEnd_toStartOf="@+id/setButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setButton" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/genderRadio" />

</androidx.constraintlayout.widget.ConstraintLayout>